--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "allotment": "^1.17.1",
+    "@vercel/analytics": "^0.1.6",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-terminal": "^1.3.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
